--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -90,7 +90,7 @@
     <TextView
         android:id="@+id/txtSoGhe"
         android:layout_width="217dp"
-        android:layout_height="27dp"
+        android:layout_height="wrap_content"
         android:drawableTint="#F40F0F"
         android:textColorLink="#FFFFFF"
         android:textSize="14sp"
