--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -12,7 +12,7 @@
         android:layout_height="184dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/haiphuongposter" />
+        app:srcCompat="@drawable/a2" />
 
     <TextView
         android:id="@+id/txtTenPhim"
