--- a/app/src/main/res/layout/activity_thong_tin_ve.xml
+++ b/app/src/main/res/layout/activity_thong_tin_ve.xml
@@ -72,12 +72,12 @@
         android:layout_width="266dp"
         android:layout_height="45dp"
         android:layout_marginStart="156dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.992"
         app:layout_constraintStart_toEndOf="@+id/textView30"
         app:layout_constraintTop_toBottomOf="@+id/txtTTGDGhe" />
 
@@ -97,12 +97,12 @@
         android:layout_width="266dp"
         android:layout_height="45dp"
         android:layout_marginStart="156dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="A1; A2"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.978"
         app:layout_constraintStart_toEndOf="@+id/textView28"
         app:layout_constraintTop_toBottomOf="@+id/txtTTGDSuatChieu" />
 
@@ -133,7 +133,7 @@
         android:layout_width="266dp"
         android:layout_height="45dp"
         android:layout_marginStart="156dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="1"
         android:textSize="18sp"
@@ -214,5 +214,6 @@
         android:text="THAY ĐỔI"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView32" />
+        app:layout_constraintTop_toBottomOf="@+id/textView32"
+        app:layout_constraintVertical_bias="0.526" />
 </androidx.constraintlayout.widget.ConstraintLayout>
