--- a/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
+++ b/app/src/main/res/layout/activity_thay_doi_mat_khau.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/custom_button"
         android:text="Lưu"
+        android:onClick="LuuThayDoi"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNLMKTT" />
@@ -27,6 +28,7 @@
         android:layout_marginEnd="70dp"
         android:background="@drawable/custom_button"
         android:text="Thoát"
+        android:onClick="Thoat"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextNLMKTT" />
