--- a/app/src/main/res/layout/fragment_d_s_phim_dang_chieu.xml
+++ b/app/src/main/res/layout/fragment_d_s_phim_dang_chieu.xml
@@ -18,6 +18,25 @@
             android:paddingTop="10dp">
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView19"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Loại Phim:"
+                    android:textSize="18sp" />
+
+                <Spinner
+                    android:id="@+id/spnDSPhimDC"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/RVDSPhimDangChieu"
                 android:layout_width="match_parent"
